# shengka-be

./: .env  .gitignore  README.md  grok.py  main.py  pyproject.toml  requirements.txt
Api/: Api_chat_async.py  JiuTianReq_class.py  RoleReq_class.py  RoleResp_class.py  api_test.py  deepseek_api.py  login_api.py  qny_api.py  volcengine_protocols.py  volcengine_tts_api.py
Api/protocols/: protocols.py
LLM_utils/: JiuTian_LLM_Connection.py  LLM_Connection.py  LLM_dp_test.py
LLM_utils/config/: api_key.json  config_read.py
OLogger/: MyLogger.py
Shell/: start
config/: config.yaml  config_read.py
utils/: mongo_utils.py  qny.py
