[project]
name = "chatbot-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "loguru>=0.7.3",
    "openai>=1.107.2",
    "pycryptodome>=3.23.0",
    "pymongo>=4.14.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "qiniu>=7.17.0",
    "uvicorn>=0.35.0",
    "pydub>=0.25.1",
]
